--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,7 @@ rights_url: http://creativecommons.org/about/pdm
 series_note: Understanding the atom
 subjects:
 - !lcsh 'Radioactive dating'
+- GITenberg
 title: 'Nuclear Clocks
 
   Revised'
